# sysid

./: .gitignore  01_batch_least_squares.ipynb  ANN_activities.md  ANN_narx.ipynb  IFAC2015_LTV.ipynb  NARX_FROLS_Model.ipynb  Pedagogical_example_NODE.ipynb  README.md  _config.yml  _toc.yml  ann.md  bab_ann_mpc_approximation.ipynb  ball_and_beam_data.ipynb  ball_and_hoop.ipynb  batch_least_squares.ipynb  case_studies.ipynb  case_studies.md  excitation_signals.ipynb  frols.ipynb  gain_scheduling_14_drone.ipynb  grey-box-activity.md  grey_box.md  grey_box_activity_1.ipynb  grey_box_activity_2a.ipynb  grey_box_activity_2b.ipynb  how_to_update.md  introduction.ipynb  lagrange.ipynb  lagrange_quarter_drone.ipynb  linear.md  linear_activities.md  linear_activities_BLS.md  linear_activities_RLS.md  mpc_ball_and_beam.md  mpc_grey_box_14_drone.ipynb  mpc_quarter_drone.md  multiple_shooting.ipynb  narmax.md  narmax_activities.md  narmax_activity_1.ipynb  (+21 more)
.github/workflows/: deploy.yml
MATLAB/: multisin_beam.mat  random_steps.mat  read_data.mlx  readme.md
data/: 01_rampa_positiva.mat  02_rampa_negativa.mat  03_random_steps_01.mat  03_random_steps_02.mat  03_random_steps_03.mat  03_random_steps_04.mat  04_swept_sine.mat  05_multisine_01.mat  06_multisine_02.mat  OL_acquisition.mat  OL_processed_data.mat  README.md  aquisicao_02_mpc_modelo_NARX.mat  closedLoop.mat  dados_14_drone.csv  dados_seq_degraus.csv  fixedStepSequence.mat  increasing_steps_uy.mat  multisin_beam_uy.mat  randomStepSequence.mat  random_steps_uy.mat
docs/: README.md  references_quarter_drone.pptx
(+29 files in other folders)
