[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sysid"
version = "0.1.0"
description = "System identification course methods (NARX/FROLS) and dataset loaders"
authors = [{ name = "Helon Ayala" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "scipy",
    "tqdm",
]

[project.urls]
Homepage = "https://helonayala.github.io/sysid/"
Repository = "https://github.com/helonayala/sysid"

[tool.setuptools.packages.find]
where = ["src"]
